--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.1",
     "expo": "~44.0.0",
@@ -17,6 +18,7 @@
     "firebase": "^9.6.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-firebase-hooks": "^5.0.3",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
